# mock-dss-load-tests-taurus

./: .env.local.example  .gitignore  README.md  api_loadtest.py  db_loadtest.py  main.py  molotov_scenario.py  pyproject.toml  requirements.txt  taurus.yml
clients/: postgresql.py
core/: config.py  constants.py  decorators.py  helpers.py
java-load-tests/: pom.xml
java-load-tests/src/main/java/com/example/: ApiLoadTest.java  JMeterTestPlan.jmx  PostgresClient.java
java-load-tests/src/main/resources/: config.properties
